RESOLVED FIXED204077
ASSERT at PlatformCALayerCocoa::avPlayerLayer(): [platformLayer() sublayers].count == 1
https://bugs.webkit.org/show_bug.cgi?id=204077
Summary ASSERT at PlatformCALayerCocoa::avPlayerLayer(): [platformLayer() sublayers]....
Jer Noble
Reported 2019-11-11 11:04:01 PST
ASSERT at PlatformCALayerCocoa::avPlayerLayer(): [platformLayer() sublayers].count == 1
Attachments
Patch (16.99 KB, patch)
2019-11-11 11:07 PST, Jer Noble
no flags
Patch for landing (16.48 KB, patch)
2019-11-11 13:24 PST, Jer Noble
no flags
Jer Noble
Comment 1 2019-11-11 11:04:27 PST
Jer Noble
Comment 2 2019-11-11 11:07:23 PST
Simon Fraser (smfr)
Comment 3 2019-11-11 11:40:47 PST
Comment on attachment 383285 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383285&action=review > Source/WebCore/platform/graphics/ca/cocoa/WebVideoContainerLayer.mm:53 > + // Pre-apply the transform added in the WebProcess to fix <rdar://problem/18316542> to the position. Comment doesn't parse.
Jer Noble
Comment 4 2019-11-11 13:12:04 PST
(In reply to Simon Fraser (smfr) from comment #3) > Comment on attachment 383285 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=383285&action=review > > > Source/WebCore/platform/graphics/ca/cocoa/WebVideoContainerLayer.mm:53 > > + // Pre-apply the transform added in the WebProcess to fix <rdar://problem/18316542> to the position. > > Comment doesn't parse. I didn't write it, I just moved it from one file to another.
Jer Noble
Comment 5 2019-11-11 13:24:59 PST
Created attachment 383291 [details] Patch for landing
WebKit Commit Bot
Comment 6 2019-11-11 17:05:04 PST
Comment on attachment 383291 [details] Patch for landing Clearing flags on attachment: 383291 Committed r252346: <https://trac.webkit.org/changeset/252346>
WebKit Commit Bot
Comment 7 2019-11-11 17:05:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.